Fix aside alignment

--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -11,8 +11,7 @@ aside {
   display: block;
   background-color: #333333;
   height: 100%;
-  width: 250px;
-  margin-top: 100px;
+  width: 200px;
 }
 
 aside > article h2 {
@@ -20,8 +19,14 @@ aside > article h2 {
   font-size: 1em;
 }
 
+article {
+  margin: 0 10px;
+  padding: 15px;
+}
+
 main {
-  padding-left: 150px;
+  left: 200px;
+  padding: 100px;
   max-width: 700px;
 }
 
